# flutter-server

./: .gitignore  CLAUDE.md  CLEANUP_STANDARDIZATION_SUMMARY.md  CLEANUP_SUMMARY.md  Dockerfile  ENHANCED_RECOVERY_SYSTEM.md  LANGFUSE_INTEGRATION.md  MODULARIZATION_SUMMARY.md  PRE_HOT_RELOAD_ANALYSIS.md  README.md  SHELL_COMMAND_INTEGRATION.md  STREAMING_API.md  TEST_ERROR_PROMPTS.md  app.py  build.py  cloudbuild.yaml  code_modification_architecture.md  development_startup.sh  flutter-env.service  flutter_server.py  nginx.conf  pyproject.toml  run.py  run_new.py  start-flutter-env.sh  startup.sh  test_actual_dart_analysis.py  test_agentic_error_recovery.py  test_batching_focused.py  test_code_generation_batching.py  test_dart_analysis_parsing.py  test_generate_code_v2.py  test_langfuse_integration.py  test_mock_llm_responses.py  test_pre_hot_reload_analysis.py  test_progressive_parser.py  test_recovery_system.py  test_shell_parser.py  test_streaming.py  todo.txt
.claude/: settings.local.json
chat/: __init__.py  chat_manager.py  chat_service.py  conversation_handler.py
code_modification/: __init__.py  build_pipeline.py  code_modifier.py  command_executor.py  dart_analysis.py  dart_analysis_fixer.py  error_diff_analyzer.py  hot_reload_recovery.py  iterative_fixer.py  project_analyzer.py  prompt_loader.py  relace_applier.py  shell_command_parser.py
diagrams/: claude_to_frontend_flow.md  live_code_generation.md  sse_streaming_architecture.md
logs/: recovery_1750608852.json  recovery_1750609931.json  recovery_1750686182.json  recovery_1750733982.json  (+9 more)
src/: config.py  (+4 more)
(+102 files in other folders)
