[tool.poetry]
name = "flutter-server"
version = "0.1.0"
description = "A Flutter development server with hot reload capabilities and web-based code editor"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^3.0.0"
flask-cors = "^4.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

